# EL-MOSTASHAR-Graduation-Project

./: .dockerignore  .env.example  .gitignore  Dockerfile  ENVIRONMENT_VARIABLES.md  README.md  docker-compose.yml  enhanced_extraction_summary.json  legal_index.pkl  main.py  pipeline.ipynb  pipeline.py  pyproject.toml  requirements.txt  test_api.py  test_end_to_end.py
Experiments/: App_Exp.ipynb
Experiments/LLMs_experiments/: Models_Exp.ipynb
Experiments/VS_expriments/: VS_for_na2d.ipynb  vector_store_builder.ipynb
Experiments/chunking_expriments/: chunking_0.ipynb  chunking_1.ipynb  chunking_10.ipynb  chunking_5.ipynb  chunking_6.ipynb  chunking_9.ipynb
Experiments/graph_builder_expriments/: graph_builder.ipynb
Experiments/graph_store_expriments/: KG_builder.ipynb  KG_builder_01.ipynb
PROFESSIONAL_DOCS/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT_GUIDE.md  DOCUMENTATION_INDEX.md  INSTALLATION_AND_SETUP.md  PROJECT_OVERVIEW.md  QUICK_REFERENCE.md  SUMMARY.txt  TROUBLESHOOTING.md  USAGE_GUIDE.md
Src/: docker-compose.yml
Src/gateway/: Dockerfile  requirements.txt
Src/ingestion-service/: Dockerfile  requirements.txt
Src/ingestion_service/: requirements.txt
Src/kg-service/: Dockerfile  requirements.txt
Src/kg_service/: Dockerfile  requirements.txt
Src/llm-service/: Dockerfile  requirements.txt
Src/llm_service/: requirements.txt
Src/orchestrator/: Dockerfile  requirements.txt
Src/retrieval-service/: Dockerfile  requirements.txt
Src/retrieval_service/: Dockerfile  requirements.txt
Src/shared/: pyproject.toml  requirements.txt
Src/shared/Config/: settings.py
Src/shared/Utils/: __init__.py  api_client.py  main_entity_classes.py
System_Plan_and_Arch/: AGENTS_IO.txt  Our Graduation system.txt  SYSTEM_DOCUMENTATION.txt
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT_GUIDE.md  DOCUMENTATION_INDEX.md  INSTALLATION_AND_SETUP.md  PROJECT_OVERVIEW.md  QUICK_REFERENCE.md  SUMMARY.txt  TROUBLESHOOTING.md  USAGE_GUIDE.md
legal_faiss_index/: index.faiss  index.pkl
na2d_faiss_index/: index.faiss  index.pkl
src/: pipeline.py
src/Chunking/: all_legal_articles.txt  chunking.ipynb  chunking.py  chunking_2.ipynb  chunking_3.ipynb  chunking_enums.py  na2d_chunking.py
src/Config/: Signals.py  config.py  log_config.py
src/Graph/: __init__.py  graph_builder.py  graph_helpers.py  graph_routers.py  main_entity_classes.py  shared_resources.py  state.py
src/Graphstore/: KG_builder.py  graph_rag.py  graph_store_schema.ipynb  kg_enums.py
src/LLMs/: CONFESSION_VALIDITY_MODEL.py  DATA_INGESTION_MODEL.py  DEFENSE_AGENT_MODEL.py  EVIDENCE_SCORING_MODEL.py  GPT_OSS_Model.py  JUDGE_MODEL.py  JUDJICAL_PRINCIPLE_AGENT.py  LEGAL_RESEARCHER_MODEL.py  Llama_Model.py  MODEL_BASE.py  PROCEDURAL_AUDITOR_MODEL.py  PROSECUTION_ANALYST_MODEL.py  Qwen_Model.py  SENTENCING_MODEL.py  WITNESS_CREDIBILITY_MODEL.py
src/Nodes/: __init__.py  agent_base.py  data_ingestion_agent.py  defense_analyst_agent.py  evidence_analyst_agent.py  judge_agent.py  nodes.py  (+1 more)
(+160 files in other folders)
