[project]
name = "graduation-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arabic-reshaper==3.0.0",
    "dotenv>=0.9.9",
    "faiss-cpu==1.13.2",
    "fastapi==0.129.1",
    "fitz==0.0.1.dev2",
    "frontend>=0.0.3",
    "ipykernel>=7.1.0",
    "langchain==1.2.10",
    "langchain-community==0.4.1",
    "langchain-experimental==0.4.1",
    "langchain-groq==1.1.2",
    "langchain-huggingface==1.2.0",
    "langchain-neo4j==0.8.0",
    "langgraph==1.0.9",
    "neo4j==6.1.0",
    "networkx==3.6.1",
    "ocrmypdf==17.3.0",
    "opencv-python==4.13.0.92",
    "pandas>=2.0.0",
    "pdfminer-six==20251230",
    "pdfplumber==0.11.9",
    "pikepdf==10.3.0",
    "pillow==12.1.1",
    "pymupdf==1.27.1",
    "pypdf==6.7.1",
    "pypdf2==3.0.1",
    "pytesseract==0.3.13",
    "python-bidi==0.6.7",
    "python-dotenv==1.2.1",
    "scikit-learn==1.8.0",
    "sentence-transformers==5.2.3",
    "uvicorn==0.41.0",
]
